add roboto font & change layout

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/index.css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	</head>
 
 	<body class="wrap">		
 		<header class="layout ">
-			<div class="layout__left  is-column is-header">
+			<div class="layout__left  is-column is-none-bg is-header ">
 				<div class="box"></div>
 				<img src="" alt="">
 			</div>
@@ -29,11 +30,11 @@
 			</div>
 		</header>
 		
-		<div class="layout">
-			<div class="layout__left is-column">
+		<div class="layout is-100 is-stretch">
+			<div class="layout__left is-column is-none-bg">
 				<div class="block">
 					<div class="title">
-						<h2>Tecnical Skills</h2>
+						<h2>Technical Skills</h2>
 					</div>
 					<div class="detail">
 						<ul>
@@ -98,6 +99,34 @@
 						</ul>
 					</div>
 				</div>	
+				<div class="block">
+					<div class="title">
+						<h2>personal skills</h2>
+					</div>
+					<div class="detail">
+						dsfaf adsfaf  adf asf af af asdfawf awef afaw faf af awef awf awf awf awf awf aw fawf awef awf aw fawf awf awf awf awf aw awf awf aw faw
+						<li>dsfaf adsfaf  adf asf af af asdfawf awef afaw faf af awef awf awf awf awf awf aw fawf awef awf aw fawf awf awf awf awf aw awf awf aw faw</li>
+					</div>
+				</div>
+				<div class="block">
+					<div class="title">
+						<h2>Language</h2>
+					</div>
+					<div class="detail">
+						<h4>English</h4>
+						<p>- Good at Reading and Writing</p>
+						<p>- Basic communication</p>
+					</div>
+				</div>
+				<div class="block">
+					<div class="title">
+						<h2>hobbies</h2>	
+					</div>
+					<div class="detail">
+						
+						<p>- some hobbies here</p>
+					</div>
+				</div>
 			</div>
 			<div class="layout__right is-column">
 				right
