--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/index.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -104,8 +105,11 @@
 						<h2>personal skills</h2>
 					</div>
 					<div class="detail">
-						dsfaf adsfaf  adf asf af af asdfawf awef afaw faf af awef awf awf awf awf awf aw fawf awef awf aw fawf awf awf awf awf aw awf awf aw faw
-						<li>dsfaf adsfaf  adf asf af af asdfawf awef afaw faf af awef awf awf awf awf awf aw fawf awef awf aw fawf awf awf awf awf aw awf awf aw faw</li>
+						<p>- Have knowledge and understanding of OOP, Database, Design partern(MVC, n-tier, Repository)</p>
+						<p>- Works well independently and in a team</p>
+						<p>- Fast and accurate learner</p>
+						<p>- Ability work under perssure and meet deadlinesa</p>
+						<p>- Be positive attitude at work</p>
 					</div>
 				</div>
 				<div class="block">
@@ -113,9 +117,16 @@
 						<h2>Language</h2>
 					</div>
 					<div class="detail">
-						<h4>English</h4>
-						<p>- Good at Reading and Writing</p>
-						<p>- Basic communication</p>
+						<div class="detail__block">
+							<div class="sub-title">
+								<h4>English</h4>
+							</div>		
+							<div class="sub__detail">
+								<p>- Good at Reading and Writing</p>
+								<p>- Basic communication</p>
+							</div>									
+						</div>
+						
 					</div>
 				</div>
 				<div class="block">
@@ -124,12 +135,79 @@
 					</div>
 					<div class="detail">
 						
-						<p>- some hobbies here</p>
+						<p>- Music</p>
+						<p>- Game</p>
+						<p>- Movies</p>
+						<p>- Drawing</p>
 					</div>
 				</div>
 			</div>
 			<div class="layout__right is-column">
-				right
+				<section class="block">
+					<div class="title">
+						<h2>objective</h2>						
+					</div>
+					<div class="detail">
+						<p>Seeking an Web development intern job (PHP & Js) where I would able to promote my web programming knowledge and to put to use the knowledge gained in my study process, also to approach Node.js technology.</p>
+					</div>
+				</section>
+
+				<section class="block">
+					<div class="title">
+						<h2>education</h2>
+					</div>
+					<div class="detail">
+						<div class="detail__block">
+							<div class="sub-title">
+								<p class="font bold">Senior year at University of Information Technology</p>
+								<h5>Aug 2013 - Present</h5>
+							</div>
+							<div class="sub-detail">
+								<p><span class="font bold">Major:</span> Software Engineering</p>	
+								<p><span class="font bold">Subject:</span></p>
+								<p>- Introduction to Software Engineering</p>
+								<p>- Mobile Programming</p>
+								<p>- Systems Analysis and Design</p>
+								<p>- OOAD</p>
+								<p>- The Open Source Project</p>
+								<p>- Object-oriented Software development methodology</p>
+								<p>- Introduction to Data Structures and Algrithms</p>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<section class="block">
+					<div class="title">
+						<h2>experience</h2>
+					</div>
+						<h3>Projects</h3>
+					<div class="detail">
+						<div class="detail__block">
+							<div class="sub-title">
+								<p class="font bold underline">Motel Management</p>
+							</div>
+							<div class="sub-detail">
+								<p class="font bold">Key feature:</p>
+								<p>- Managing rooms in motel</p>
+								<p>- Booking rooms</p>
+								<p>- Managing customers</p>
+								<p ><span class="font bold">Techology:</span> C#, MSSQL Server, 3-layer Architecture </p>
+							</div>
+						</div>
+
+						<div class="detail__block">
+							<div class="sub-title">
+								<p class="font bold underline">Fashion shop online (font-end only)</p>
+							</div>
+							<div class="sub-detail">								
+								<p class="font bold">Key feature:</p>
+								<p>- Focusing on the UI & UX</p>
+								<p ><span class="font bold">Techology:</span> HTML, CSS(css3 & sass), Js(vue.js, npm, gulp)</p>
+							</div>
+						</div>
+					</div>
+				</section>
 			</div>
 			
 		</div>
