litle modify for space fix

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-5"></div>	
+										<div class="child is-6"></div>	
 									</div>
 								</div>
 							</li>
@@ -57,7 +57,7 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-5"></div>	
+										<div class="child is-6"></div>	
 									</div>
 								</div>
 							</li>
@@ -69,7 +69,7 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-7"></div>	
+										<div class="child is-8"></div>	
 									</div>
 								</div>
 							</li>
@@ -81,7 +81,7 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-7"></div>	
+										<div class="child is-8"></div>	
 									</div>
 								</div>
 							</li>
@@ -93,7 +93,7 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-5"></div>	
+										<div class="child is-6"></div>	
 									</div>
 								</div>
 							</li>
@@ -108,7 +108,7 @@
 						<p>- Have knowledge and understanding of OOP, Database, Design partern(MVC, n-tier, Repository)</p>
 						<p>- Works well independently and in a team</p>
 						<p>- Fast and accurate learner</p>
-						<p>- Ability work under perssure and meet deadlinesa</p>
+						<p>- Ability work under perssure and meet deadlines</p>
 						<p>- Be positive attitude at work</p>
 					</div>
 				</div>
@@ -171,7 +171,6 @@
 								<p>- OOAD</p>
 								<p>- The Open Source Project</p>
 								<p>- Object-oriented Software development methodology</p>
-								<p>- Introduction to Data Structures and Algrithms</p>
 							</div>
 						</div>
 					</div>
@@ -181,7 +180,29 @@
 					<div class="title">
 						<h2>experience</h2>
 					</div>
-						<h3>Projects</h3>
+					<h3>Activities</h3>
+					<div class="detail">
+						<div class="detail__block">
+							<div class="sub-title">
+								<p class="font bold">22nd Green Summer - 2015</p>
+							</div>
+							<div class="sub-detail">
+								<p>A nationwide scale volunteer program and organized every year in summer</p>
+							</div>
+						</div>
+
+						<div class="detail__block">
+							<div class="sub-title">
+								<p class="font bold">Game UIT Hackathon 2016</p>
+								<h5>28/5 - 29/5, 2016</h5>
+							</div>
+							<div class="sub-detail">
+								<p>A Game making contest was organized by University of Information Technology</p>
+							</div>
+						</div>
+					</div>
+
+					<h3>Projects</h3>
 					<div class="detail">
 						<div class="detail__block">
 							<div class="sub-title">
