--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 	<body class="wrap">		
 		<header class="layout ">
-			<div class="layout__left  is-column is-none-bg is-header ">
-				<div class="box"></div>
-				<img src="" alt="">
+			<div class="layout__left  is-column is-none-bg is-header " style="text-align: center">
+				
+				<img class="res" src="./image.jpg" alt="">
 			</div>
 
 			<div class="layout__right is-column is-header">
@@ -197,7 +197,7 @@
 								<h5>28/5 - 29/5, 2016</h5>
 							</div>
 							<div class="sub-detail">
-								<p>A Game making contest was organized by University of Information Technology</p>
+								<p>A 24 hours Game making contest was organized by University of Information Technology</p>
 							</div>
 						</div>
 					</div>
