fix some information

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="info">
 					<ul>
 						<li>May 29, 1995</li>
-						<li>+841228090142</li>
+						<li>(+84) 122 809 0142</li>
 						<li>Ho Chi Minh City, Viet Nam</li>
 					</ul>
 					<ul>
@@ -45,7 +45,7 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-6"></div>	
+										<div class="child is-5"></div>	
 									</div>
 								</div>
 							</li>
@@ -57,7 +57,7 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-6"></div>	
+										<div class="child is-5"></div>	
 									</div>
 								</div>
 							</li>
@@ -69,7 +69,7 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-8"></div>	
+										<div class="child is-7"></div>	
 									</div>
 								</div>
 							</li>
@@ -81,7 +81,7 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-8"></div>	
+										<div class="child is-7"></div>	
 									</div>
 								</div>
 							</li>
@@ -93,10 +93,18 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-6"></div>	
+										<div class="child is-5"></div>	
 									</div>
 								</div>
 							</li>
+						</ul>
+
+
+						<p>- Have knowledge and understanding of</p>
+						<ul style="padding-left: 10px">
+							<li> + OOP</li>
+							<li> + Database (MSSQL server)</li>
+							<li> + Design pattern ( MVC, n-tier, Repository)</li>
 						</ul>
 					</div>
 				</div>	
@@ -105,7 +113,6 @@
 						<h2>personal skills</h2>
 					</div>
 					<div class="detail">
-						<p>- Have knowledge and understanding of OOP, Database, Design partern(MVC, n-tier, Repository)</p>
 						<p>- Works well independently and in a team</p>
 						<p>- Fast and accurate learner</p>
 						<p>- Ability work under perssure and meet deadlines</p>
@@ -122,7 +129,7 @@
 								<h4>English</h4>
 							</div>		
 							<div class="sub__detail">
-								<p>- Good at Reading and Writing</p>
+								<p>- Basic Reading and Writing</p>
 								<p>- Basic communication</p>
 							</div>									
 						</div>
@@ -164,7 +171,7 @@
 							</div>
 							<div class="sub-detail">
 								<p><span class="font bold">Major:</span> Software Engineering</p>	
-								<p><span class="font bold">Subject:</span></p>
+								<p><span class="font bold">Subjects:</span></p>
 								<p>- Introduction to Software Engineering</p>
 								<p>- Mobile Programming</p>
 								<p>- Systems Analysis and Design</p>
@@ -193,7 +200,7 @@
 						<div class="detail__block">
 							<div class="sub-title">
 								<p class="font bold">Game UIT Hackathon 2016</p>
-								<h5>28/5 - 29/5, 2016</h5>
+								<h5> May 2016</h5>
 							</div>
 							<div class="sub-detail">
 								<p>A 24 hours Game making contest was organized by University of Information Technology</p>
@@ -212,18 +219,18 @@
 								<p>- Managing rooms in motel</p>
 								<p>- Booking rooms</p>
 								<p>- Managing customers</p>
-								<p ><span class="font bold">Techology:</span> C#, MSSQL Server, 3-layer Architecture </p>
+								<p ><span class="font bold">Technologies:</span> C#, MSSQL Server, 3-layer Architecture </p>
 							</div>
 						</div>
 
 						<div class="detail__block">
 							<div class="sub-title">
-								<p class="font bold underline">Fashion shop online (font-end only)</p>
+								<p class="font bold underline">Fashion shop online (front-end only)</p>
 							</div>
 							<div class="sub-detail">								
 								<p class="font bold">Key feature:</p>
-								<p>- Focusing on the UI & UX</p>
-								<p ><span class="font bold">Techology:</span> HTML, CSS(css3 & sass), Js(vue.js, npm, gulp)</p>
+								<p>- Focusing on the excellent UI & UX</p>
+								<p ><span class="font bold">Technologies:</span> HTML, CSS(css3 & sass), Js(vue.js, npm, gulp)</p>
 							</div>
 						</div>
 					</div>
