--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-5"></div>	
+										<div class="child is-4"></div>	
 									</div>
 								</div>
 							</li>
@@ -57,7 +57,7 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-5"></div>	
+										<div class="child is-6"></div>	
 									</div>
 								</div>
 							</li>
@@ -69,7 +69,7 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-7"></div>	
+										<div class="child is-6"></div>	
 									</div>
 								</div>
 							</li>
@@ -81,7 +81,7 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-7"></div>	
+										<div class="child is-6"></div>	
 									</div>
 								</div>
 							</li>
@@ -93,7 +93,7 @@
 								</div>
 								<div class="detail__level">
 									<div class="process">
-										<div class="child is-5"></div>	
+										<div class="child is-6"></div>	
 									</div>
 								</div>
 							</li>
@@ -212,9 +212,9 @@
 					<div class="detail">
 						<div class="detail__block">
 							<div class="sub-title">
-								<p class="font bold underline">Motel Management</p>
+								<p class="font bold">Motel Management</p>
 							</div>
-							<div class="sub-detail">
+							<div class="sub-detail move-to-right">
 								<p class="font bold">Key feature:</p>
 								<p>- Managing rooms in motel</p>
 								<p>- Booking rooms</p>
@@ -225,9 +225,9 @@
 
 						<div class="detail__block">
 							<div class="sub-title">
-								<p class="font bold underline">Fashion shop online (front-end only)</p>
+								<p class="font bold">Fashion shop online (front-end only)</p>
 							</div>
-							<div class="sub-detail">								
+							<div class="sub-detail move-to-right">								
 								<p class="font bold">Key feature:</p>
 								<p>- Focusing on the excellent UI & UX</p>
 								<p ><span class="font bold">Technologies:</span> HTML, CSS(css3 & sass), Js(vue.js, npm, gulp)</p>
